--- a/papeleria-login/css/style.css
+++ b/papeleria-login/css/style.css
@@ -1,3 +1,11 @@
+.title
+{
+    text-align: center;
+    color: #2c7873;
+    font-size: 30px;
+    margin: 0;
+    padding: 0;
+}
 .contenido {
     width: 100%;
     height: 100%;
