--- a/papeleria/css/style.css
+++ b/papeleria/css/style.css
@@ -63,6 +63,7 @@ a:hover {
     background-color: #004445;
     color: #ffffff;
 }
+
 input[type="text"]{
     padding: 10px;
     margin-top: 10px;
@@ -81,3 +82,40 @@ input[type="submit"] {
     margin-top: 20px;
     cursor: pointer;
 }
+.menu {
+    background-color: #2C7873;
+    overflow: hidden;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .menu li {
+    float: left;
+  }
+  
+  .menu li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .menu li a:hover {
+    background-color: #004445;
+  }
+  
+  .menu .active {
+    background-color: #021C1E;
+  }
+  
+  @media (max-width: 600px) {
+    .menu li {
+      float: none;
+    }
+    .menu li a {
+      width: 100%;
+    }
+  }
+  
