--- a/papeleria/css/style_menu.css
+++ b/papeleria/css/style_menu.css
@@ -1,4 +1,4 @@
-.menu {
+/* .menu {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -29,4 +29,4 @@ ul {
 }
 .active {
     background-color: #4CAF50;
-}
+} */
